--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
+    "react-intersection-observer": "^10.0.0",
+    "react-spring": "^10.0.3",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
