--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "next-themes": "^0.4.6",
+    "next-video": "^2.6.0",
     "postcss": "^8.5.6",
     "react": "19.2.1",
     "react-day-picker": "^9.12.0",
