--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
+    "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^2.0.0",
     "autoprefixer": "^10.4.22",
     "class-variance-authority": "^0.7.1",
