almost done with the ui

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^2.0.0",
     "autoprefixer": "^10.4.22",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -35,6 +36,7 @@
     "next": "16.0.8",
     "next-themes": "^0.4.6",
     "next-video": "^2.6.0",
+    "paystack": "^2.0.1",
     "postcss": "^8.5.6",
     "react": "19.2.1",
     "react-day-picker": "^9.12.0",
