--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@supabase/supabase-js": "^2.87.1",
     "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^2.0.0",
+    "@vercel/speed-insights": "^1.3.1",
     "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
